--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,11 @@
             "Bic\\Vulkan\\Tests\\": "tests"
         }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
