--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bic/vulkan",
+    "name": "bic-engine/vulkan",
     "description": "PHP Vulkan bindings",
     "require": {
         "php": ">=7.4",
